# mlPaper

./: .Rprofile  .gitignore  Makefile  README.md  TODO.md  hello.py  model_performance.md  pyproject.toml  pyrightconfig.json
data/: all_correlations_desc.csv  corrutption_construction.txt  full_imputed_n_index.parquet  full_numeric.parquet  neg_top10_correlations.csv  pos_top10_correlations.csv  social_predictors.txt  subset.parquet  subset_imputed.parquet  subset_numeric.parquet  vdem_correlations_with_corruption_pandas.csv
models/: full_linear_models.py  model_comparison.py  subet_linear_models.py
notebooks/: Backslide_value_justification.ipynb  EDA_Paul.ipynb  Final_EDA.ipynb  Intro.ipynb  Linear_regression.ipynb  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  analysis.ipynb  linear_approaches.ipynb  linear_model_2.ipynb  regression.ipynb  subset_and_GDP.ipynb
notes/: ideas.md
scripts/: getData.sh  working_dataset_creator.py
setup/: README.md  setup.R  setup2.R  setup_all.R
src/: EDA_corre_indices.py  README.md  corr_map_indices.py  corr_over_time.py  corruption_corr_test.py  get_top_10_definitions.R  index_corr_with_target.py  index_heatmap.py  model_benchmark.py  top_10_corr.py  v2x_corr_avg_over_time.py  v2x_corr_to_all.py  var_corr_with_target.py  var_heatmap.py
src/R/: reg_corr_lib_demoncracy.R  subset_women_corr.R  women_corr.R
writeup/: _quarto.yml  full_model_summary.md  machineLearningWriteup.qmd  main.typ  test.csv  works.bib
writeup/tables/: full_linear_perfomance.md  model_performance.md
