[project]
name = "mlpaper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.1",
    "mlx>=0.24.2",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "polars>=1.27.1",
    "pyarrow>=19.0.1",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
    "tqdm>=4.67.1",
    "ucimlrepo>=0.0.7",
    "world-bank-data>=0.1.4",
    "xgboost>=3.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.5",
]
